tests/ui/resolve/name-clash-nullary.stderr
error[E0308]: mismatched types
  --> $DIR/name-clash-nullary.rs:2:7
   |
LL |   let None: isize = 42;
   |       ^^^^  ----- expected due to this
   |       |
   |       expected `isize`, found `Option<_>`
   |       `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected type `isize`
              found enum `Option<_>`
help: introduce a new binding instead
   |
LL -   let None: isize = 42;
LL +   let other_none: isize = 42;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
