tests/ui/resolve/name-clash-nullary.rs
fn main() {
  let None: isize = 42; //~ ERROR mismatched types
}
